fix width on mobile

--- a/src/assets/scss/components/_contact-us.scss
+++ b/src/assets/scss/components/_contact-us.scss
@@ -186,9 +186,13 @@
 
 @media (max-width: 550px) {
   .contact-us-container {
+    .social-media {
+      max-width: 100vw;
+    }
+
     .contact-us-card {
       z-index: 2;
-      width  : 100vw;
+      width  : 100vw !important;
       display: flex;
 
 
